<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color">


        <LinearLayout
            android:layout_width="414dp"
            android:layout_height="722dp"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_xlarge"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/todo_bg"
                android:layout_marginTop="@dimen/margin_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/welcomeImage"
                />


            <TextView
                android:id="@+id/title_text_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_medium"
                android:fontFamily="@font/baloo"
                android:text="@string/title_text_signup"
                android:textAlignment="center"
                android:textColor="@color/default_text_color"
                android:textSize="@dimen/font_large"
                />

            <EditText
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:paddingLeft="@dimen/margin_small"
                android:hint="@string/name_hint"
                android:textColorHint="@color/default_hint_color"
                android:textColor="@color/default_text_color"
                android:layout_gravity="center"
                android:elevation="16dp"
                android:maxLines="1"
                android:maxLength="50"
                android:drawableStart="@drawable/person_icon"
                android:drawablePadding="@dimen/margin_small"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/actor"
                />

            <EditText
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:paddingLeft="@dimen/margin_small"
                android:hint="@string/email_hint"
                android:textColorHint="@color/default_hint_color"
                android:textColor="@color/default_text_color"
                android:layout_gravity="center"
                android:elevation="16dp"
                android:maxLines="1"
                android:maxLength="30"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="@dimen/margin_small"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/actor"

                />
            <EditText
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:paddingLeft="@dimen/margin_small"
                android:hint="@string/set_password_hint"
                android:textColorHint="@color/default_hint_color"
                android:textColor="@color/default_text_color"
                android:layout_gravity="center"
                android:elevation="16dp"
                android:maxLines="1"
                android:maxLength="20"
                android:drawablePadding="@dimen/margin_small"
                android:drawableStart="@drawable/lock_icon"
                android:inputType="textPassword"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/actor"

                />

            <EditText
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:paddingLeft="@dimen/margin_small"
                android:hint="@string/confirm_password_hint"
                android:textColorHint="@color/default_hint_color"
                android:textColor="@color/default_text_color"
                android:layout_gravity="center"
                android:elevation="16dp"
                android:maxLines="1"
                android:maxLength="20"
                android:inputType="textPassword"
                android:background="@drawable/edit_text_bg"
                android:drawablePadding="@dimen/margin_small"
                android:drawableStart="@drawable/lock_icon"
                android:fontFamily="@font/actor"

                />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@drawable/welcome_button_bg"
                android:text="@string/sign_up"
                app:elevation="250dp" />



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginVertical="@dimen/margin_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/already_have_an_account"
                    android:textColor="@color/default_text_color"
                    />

                <TextView
                    android:id="@+id/sign_in_swap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/sign_in"
                    android:textColor="@color/custom_text_color"

                    />

            </LinearLayout>

        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>